--- a/index.html
+++ b/index.html
@@ -1,71 +1,85 @@
-<!doctype html>
-<!-- Mode buttons -->
-<a-entity id="btn-hygiene" geometry="primitive: plane; width: 1.8; height: .28" material="color: #FFFFFF" position="0 -0.2 0" class="clickable"></a-entity>
-<a-entity text="value: 🧼 Handwash Hero; align: center; width: 2.4; color: #111" position="0 -0.2 0.01"></a-entity>
+<!DOCTYPE html>
+<html lang="th">
+<head>
+  <meta charset="utf-8" />
+  <title>Health3 VR — Spatial/WebXR</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1"/>
+  <!-- A-Frame core -->
+  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+  <!-- Troika (รองรับภาษาไทย) -->
+  <script src="https://unpkg.com/troika-three-text/dist/troika-three-text.umd.js"></script>
+  <script src="https://unpkg.com/aframe-troika-text/dist/aframe-troika-text.min.js"></script>
+  <!-- Game logic -->
+  <script src="script.js"></script>
+  <style>
+    html,body { margin:0; height:100%; background:#000; touch-action: manipulation; }
+    canvas { touch-action: manipulation; }
+  </style>
+</head>
+<body>
+  <!-- เปิด fontsize-apply + ensure-cursor + tap-to-click -->
+  <a-scene renderer="antialias: true"
+           tick-timer hand-gestures ensure-cursor fontsize-apply tap-to-click>
+    <!-- กล้อง + ตัวชี้ -->
+    <a-entity id="rig">
+      <a-entity id="camera" camera look-controls position="0 1.6 0">
+        <!-- รีทิเคิล (ชี้กลางหน้าจอ) -->
+        <a-entity id="reticle"
+                  cursor="rayOrigin: entity; fuse: false"
+                  raycaster="objects: .clickable, [troika-text]; far: 30"
+                  geometry="primitive: ring; radiusInner: 0.003; radiusOuter: 0.006"
+                  material="color: #FFFFFF; shader: flat; opacity: 0.9"
+                  position="0 0 -1"></a-entity>
+      </a-entity>
+      <a-entity laser-controls="hand: right"></a-entity>
+      <a-entity id="handRight" hand-tracking-controls="hand: right"></a-entity>
+      <a-entity hand-tracking-controls="hand: left"></a-entity>
+    </a-entity>
 
+    <!-- HUD (ย้ายไปไกลขึ้นเพื่อลดขนาดบนจอ) -->
+    <a-entity id="hudState" position="0 1.70 -1.6"
+              troika-text="value:โหมด: menu; color:#FFFFFF; anchor: center; maxWidth: 2"></a-entity>
+    <a-entity id="hudScore" position="0 1.52 -1.6"
+              troika-text="value:คะแนน: 0; color:#FFFFFF; anchor: center; maxWidth: 2"></a-entity>
+    <a-entity id="hudTime"  position="0 1.34 -1.6"
+              troika-text="value:เวลา: 0s; color:#FFFFFF; anchor: center; maxWidth: 2"></a-entity>
 
-<a-entity id="btn-nutrition" geometry="primitive: plane; width: 1.8; height: .28" material="color: #FFFFFF" position="0 -0.5 0" class="clickable"></a-entity>
-<a-entity text="value: 🥗 Rainbow Plate; align: center; width: 2.4; color: #111" position="0 -0.5 0.01"></a-entity>
+    <!-- พื้นหลัง -->
+    <a-sky color="#224466"></a-sky>
+    <a-plane position="0 0 -2" rotation="-90 0 0" width="20" height="20" color="#334455"></a-plane>
 
+    <!-- เมนูหลัก (ย้ายไปไกลขึ้น) -->
+    <a-entity id="grp_menu" visible="true" position="0 1.25 -1.6">
+      <a-entity position="0 0 0"
+                troika-text="value:เลือกมินิเกม; color:#FFFFFF; anchor: center; maxWidth: 2"></a-entity>
 
-<a-entity id="btn-fitness" geometry="primitive: plane; width: 1.8; height: .28" material="color: #FFFFFF" position="0 -0.8 0" class="clickable"></a-entity>
-<a-entity text="value: 🏃 Move Quest; align: center; width: 2.4; color: #111" position="0 -0.8 0.01"></a-entity>
+      <a-box class="clickable" position="0 -0.5 0" depth="0.08" height="0.2" width="0.9"
+             color="#06D6A0" onclick="goMode('hygiene')">
+        <a-entity class="clickable" position="0 0 0.06"
+                  troika-text="value:อนามัยส่วนบุคคล; anchor: center; maxWidth: 1.6"></a-entity>
+      </a-box>
 
+      <a-box class="clickable" position="0 -1.0 0" depth="0.08" height="0.2" width="0.9"
+             color="#FFD166" onclick="goMode('nutrition')">
+        <a-entity class="clickable" position="0 0 0.06"
+                  troika-text="value:โภชนาการ; anchor: center; maxWidth: 1.6"></a-entity>
+      </a-box>
 
-<a-entity text="value: แตะ/จ้อง/บีบมือ (pinch) เพื่อเลือก; align: center; width: 2; color: #333" position="0 -1.1 0"></a-entity>
-</a-entity>
+      <a-box class="clickable" position="0 -1.5 0" depth="0.08" height="0.2" width="0.9"
+             color="#4CC9F0" onclick="goMode('exercise')">
+        <a-entity class="clickable" position="0 0 0.06"
+                  troika-text="value:การออกกำลังกาย; anchor: center; maxWidth: 1.6"></a-entity>
+      </a-box>
+    </a-entity>
 
+    <!-- ฉากย่อย -->
+    <a-entity id="grp_hygiene" visible="false"></a-entity>
+    <a-entity id="grp_nutrition" visible="false"></a-entity>
+    <a-entity id="grp_exercise" visible="false"></a-entity>
 
-<!-- HYGIENE -->
-<a-entity id="scene-hygiene" visible="false">
-<a-entity position="0 1.6 -1.4" text="value: 🧼 ล้างมือ 7 ขั้น; align: center; width: 2.2; color: #0a2540"></a-entity>
-<a-entity id="targets"></a-entity>
-</a-entity>
-
-
-<!-- NUTRITION -->
-<a-entity id="scene-nutrition" visible="false">
-<a-entity position="0 1.6 -1.4" text="value: 🥗 จานสีรุ้ง: เลือกอาหารดีต่อสุขภาพ; align: center; width: 2.4; color: #0a2540"></a-entity>
-<a-entity id="foods" position="0 1.1 -1.4"></a-entity>
-</a-entity>
-
-
-<!-- FITNESS -->
-<a-entity id="scene-fitness" visible="false">
-<a-entity position="0 1.6 -1.4" text="value: 🏃 ทำภารกิจเคลื่อนไหว; align: center; width: 2.2; color: #0a2540"></a-entity>
-<a-entity id="fitness-goal" position="0 1.1 -1.4" text="value: แตะปุ่ม Jump 10 ครั้ง!; align: center; width: 1.8; color: #111"></a-entity>
-<a-entity id="btn-jump" geometry="primitive: plane; width: 0.9; height: .28" material="color: #FFFFFF" position="0 0.6 -1.4" class="clickable"></a-entity>
-<a-entity text="value: JUMP; align: center; width: 1.4; color: #111" position="0 0.6 -1.39"></a-entity>
-</a-entity>
-</a-scene>
-
-
-<div id="dbg">ready…</div>
-
-
-<!-- HTML Fallback Menu (always on top) --> (always on top) -->
-<div id="menuOverlay" class="menu-overlay">
-<div class="menu-card">
-<h1>🧒 เมนูเกมสุขภาพ ป.5</h1>
-<div class="menu-row">
-<button class="diff-btn" data-diff="easy">ระดับ: ง่าย</button>
-<button class="diff-btn" data-diff="normal">ระดับ: ปกติ</button>
-<button class="diff-btn" data-diff="hard">ระดับ: ยาก</button>
-</div>
-<div class="menu-row">
-<button class="menu-btn hyg" id="ov-hyg">🧼 วีรบุรุษล้างมือ</button>
-<button class="menu-btn nut" id="ov-nut">🥗 จานสีรุ้งโภชนาการ</button>
-<button class="menu-btn fit" id="ov-fit">🏃 ภารกิจขยับร่างกาย</button>
-</div>
-<small>เคล็ดลับ: แตะ/จ้อง/บีบนิ้ว (pinch) ก็ได้ • หากปุ่ม 3D ไม่ขึ้น ใช้ปุ่มด้านบนนี้ได้เลย</small>
-<div class="menu-row">
-<button class="menu-btn" id="ov-quick">▶ เริ่มโหมดล้างมือทันที</button>
-</div>
-</div>
-</div>
-
-
-<!-- แยกไฟล์สคริปต์ -->
-<script src="app.js"></script>
+    <!-- แสง -->
+    <a-entity light="type: ambient; intensity: 0.7"></a-entity>
+    <a-entity light="type: directional; intensity: 0.6" position="1 3 2"></a-entity>
+  </a-scene>
 </body>
 </html>
