--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Handwash VR Game</title>
-<script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Handwash VR Game</title>
+  <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
 </head>
 <body>
 <a-scene>
   <a-assets>
+    <!-- เสียง -->
     <audio id="sfx-b3" src="assets/beep3.wav"></audio>
     <audio id="sfx-b2" src="assets/beep2.wav"></audio>
     <audio id="sfx-b1" src="assets/beep1.wav"></audio>
@@ -18,6 +19,7 @@
     <audio id="sfx-wrong" src="assets/wrong.wav"></audio>
     <audio id="ui-click" src="assets/ui_click.wav"></audio>
 
+    <!-- การ์ตูนมือ -->
     <img id="guide-palm" src="assets/hand_palm.svg">
     <img id="guide-back" src="assets/hand_back.svg">
     <img id="guide-between" src="assets/hand_between.svg">
@@ -28,6 +30,7 @@
     <img id="splash-art" src="assets/splash.svg">
   </a-assets>
 
+  <!-- กล้อง + เคอร์เซอร์ -->
   <a-entity camera look-controls position="0 1.6 0">
     <a-entity cursor="fuse:true; fuseTimeout:800" 
               geometry="primitive:ring; radiusInner:0.01; radiusOuter:0.015"
@@ -35,12 +38,14 @@
               material="color:#fff; shader:flat"></a-entity>
   </a-entity>
 
+  <!-- HUD -->
   <a-entity id="hud" position="0 2.0 -1.5">
     <a-entity id="title" text="value: เกมล้างมือ VR; width:1.8; align:center; color:#fff"></a-entity>
     <a-entity id="status" position="0 -0.2 0" text="value: แตะเพื่อเข้าสู่เมนู; width:1.5; align:center; color:#9cf"></a-entity>
     <a-entity id="score" position="0 -0.4 0" text="value: คะแนน:0 | ขั้น:0/7 | เวลา:00s; width:1.5; align:center; color:#fff"></a-entity>
   </a-entity>
 
+  <!-- Splash -->
   <a-entity id="splash" position="0 1.4 -1.6">
     <a-plane width="1.6" height="1.2" color="#222"></a-plane>
     <a-entity position="0 0.4 0.01" text="value: Handwash VR; width:1.4; align:center; color:#fff"></a-entity>
@@ -50,6 +55,7 @@
     </a-entity>
   </a-entity>
 
+  <!-- เมนูหลัก -->
   <a-entity id="menu" visible="false" position="0 1.2 -2">
     <a-entity id="btnStart" class="clickable" position="0 0.2 0"
       geometry="primitive: plane; width:1; height:0.3" material="color:#22c55e">
@@ -61,6 +67,7 @@
     </a-entity>
   </a-entity>
 
+  <!-- เวิลด์เกม -->
   <a-entity id="world"></a-entity>
 
   <script src="game.js"></script>
