--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
 </head>
 <body>
-<a-scene>
+<a-scene background="color: #0b1020">
   <a-assets>
     <audio id="sfx-b3" src="assets/beep3.wav"></audio>
     <audio id="sfx-b2" src="assets/beep2.wav"></audio>
@@ -35,32 +35,62 @@
               material="color:#fff; shader:flat"></a-entity>
   </a-entity>
 
+  <!-- HUD -->
   <a-entity id="hud" position="0 1.9 -1.5">
     <a-entity id="title" text="value: เกมล้างมือ VR; width:1.8; align:center; color:#fff"></a-entity>
-    <a-entity id="status" position="0 -0.2 0" text="value: แตะไปที่เมนูเพื่อเริ่ม; width:1.5; align:center; color:#9cf"></a-entity>
-    <a-entity id="score" position="0 -0.4 0" text="value: คะแนน:0 | ขั้น:0/7 | เวลา:00s; width:1.5; align:center; color:#fff"></a-entity>
+    <a-entity id="status" position="0 -0.2 0" text="value: จ้อง/แตะปุ่ม 'ไปที่เมนู' เพื่อเริ่ม; width:1.6; align:center; color:#9cf"></a-entity>
+    <a-entity id="score" position="0 -0.38 0" text="value: คะแนน:0 | ขั้น:0/7 | เวลา:00s; width:1.6; align:center; color:#fff"></a-entity>
   </a-entity>
 
+  <!-- Splash -->
   <a-entity id="splash" position="0 1.35 -1.6">
-    <a-plane width="1.6" height="1.2" color="#222"></a-plane>
-    <a-entity geometry="primitive: plane; width: 1.0; height: 0.5" material="shader: flat; src: #splash-art" position="0 0.2 0.01"></a-entity>
-    <a-entity id="btnEnter" class="clickable" position="0 -0.3 0.02"
-      geometry="primitive: plane; width:0.8; height:0.28" material="color:#22c55e">
-      <a-entity position="0 0 0.01" text="value: ไปที่เมนู; width:1; align:center; color:#fff"></a-entity>
+    <a-plane width="1.7" height="1.25" color="#0f172a" opacity="0.92"></a-plane>
+    <a-entity geometry="primitive: plane; width: 1.0; height: 0.5" material="shader: flat; src: #splash-art" position="0 0.22 0.01"></a-entity>
+    <a-entity position="0 -0.02 0.01" text="value: ขั้นตอน: กด 'ไปที่เมนู' → เลือกโหมด; width:1.5; align:center; color:#cbd5e1"></a-entity>
+    <a-entity id="btnEnter" class="clickable" position="0 -0.46 0.02"
+      geometry="primitive: plane; width:0.9; height:0.28" material="color:#22c55e">
+      <a-entity position="0 0 0.01" text="value: ไปที่เมนู; width:1.2; align:center; color:#fff"></a-entity>
     </a-entity>
   </a-entity>
 
+  <!-- Help overlay (hidden by default) -->
+  <a-entity id="howOverlay" visible="false" position="0 1.35 -1.5">
+    <a-plane width="1.9" height="1.1" color="#0b132b" opacity="0.96"></a-plane>
+    <a-entity position="0 0.42 0.01" text="value: วิธีเล่น; width:1.7; align:center; color:#fff"></a-entity>
+    <a-entity position="0 0.18 0.01" text="value: • จ้อง/แตะปุ่มเพื่อเลือก; width:1.7; align:center; color:#cbd5e1"></a-entity>
+    <a-entity position="0 0.04 0.01" text="value: • เริ่มเกม (จับเวลา): ทำ 7 ขั้นตอนให้ครบก่อนหมดเวลา; width:1.7; align:center; color:#cbd5e1"></a-entity>
+    <a-entity position="0 -0.10 0.01" text="value: • โหมดฝึก: ไม่มีเวลา เรียนรู้ทีละขั้น; width:1.7; align:center; color:#cbd5e1"></a-entity>
+    <a-entity position="0 -0.24 0.01" text="value: • เสียงเตือนดังช่วง 5 วิสุดท้าย; width:1.7; align:center; color:#cbd5e1"></a-entity>
+    <a-entity id="btnCloseHow" class="clickable" position="0 -0.44 0.02"
+      geometry="primitive: plane; width:0.54; height:0.22" material="color:#ef4444">
+      <a-entity position="0 0 0.01" text="value: ปิด; width:0.9; align:center; color:#fff"></a-entity>
+    </a-entity>
+  </a-entity>
+
+  <!-- Main Menu -->
   <a-entity id="menu" visible="false" position="0 1.15 -2">
-    <a-entity id="btnStart" class="clickable" position="0 0.2 0"
-      geometry="primitive: plane; width:1; height:0.3" material="color:#22c55e">
-      <a-entity position="0 0 0.01" text="value: เริ่มเกม (จับเวลา); width:1.2; align:center; color:#fff"></a-entity>
+    <a-entity position="0 0.5 0.01" text="value: เลือกโหมด:; width:1.6; align:center; color:#fff"></a-entity>
+    <a-entity position="0 0.36 0.01" text="value: • เริ่มเกม (จับเวลา) — ทำ 7 ขั้นตอนให้ทันเวลา; width:1.6; align:center; color:#9cf"></a-entity>
+    <a-entity position="0 0.26 0.01" text="value: • โหมดฝึก (ไม่มีเวลา) — ฝึกตามลำดับ; width:1.6; align:center; color:#9cf"></a-entity>
+
+    <a-entity id="btnStart" class="clickable" position="0 0.02 0"
+      geometry="primitive: plane; width:1.05; height:0.28" material="color:#22c55e">
+      <a-entity position="0 0 0.01" text="value: เริ่มเกม (จับเวลา); width:1.4; align:center; color:#fff"></a-entity>
     </a-entity>
-    <a-entity id="btnTutorial" class="clickable" position="0 -0.2 0"
-      geometry="primitive: plane; width:1; height:0.3" material="color:#0ea5e9">
-      <a-entity position="0 0 0.01" text="value: โหมดฝึก (ไม่มีเวลา); width:1.2; align:center; color:#fff"></a-entity>
+
+    <a-entity id="btnTutorial" class="clickable" position="0 -0.34 0"
+      geometry="primitive: plane; width:1.05; height:0.28" material="color:#0ea5e9">
+      <a-entity position="0 0 0.01" text="value: โหมดฝึก (ไม่มีเวลา); width:1.4; align:center; color:#fff"></a-entity>
+    </a-entity>
+
+    <!-- Help / วิธีเล่น button -->
+    <a-entity id="btnHow" class="clickable" position="0 -0.72 0"
+      geometry="primitive: plane; width:0.56; height:0.22" material="color:#334155">
+      <a-entity position="0 0 0.01" text="value: วิธีเล่น; width:0.9; align:center; color:#fff"></a-entity>
     </a-entity>
   </a-entity>
 
+  <!-- Game world -->
   <a-entity id="world"></a-entity>
 
   <script src="game.js"></script>
